--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -319,8 +319,8 @@
                     <span id="now-playing-year"></span>
                 </div>
             </div>
-            <div id="now-playing-scene-leaf" class="now-playing-leaf-card"></div>
-            <div id="now-playing-genre-leaf" class="now-playing-leaf-card"></div>
+            <div id="now-playing-scene-leaf" class="set-search-card"></div>
+            <div id="now-playing-genre-leaf" class="set-search-card"></div>
             <div class="now-playing-controls">
                 <div class="now-playing-progress-container">
                     <div id="now-playing-progress-bar" class="now-playing-progress-bar">
