--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,6 +33,7 @@
             <button id="set-mode-playset" class="set-mode-btn" disabled>Play</button>
         </div>
         <button id="set-export-btn" class="hdr-btn hdr-btn-export" disabled>Export</button>
+        <button id="set-refill-btn" class="hdr-btn" disabled title="Re-fill all BPM rows using current anchor tracks">Refill BPM</button>
     </div>
     <div id="tab-controls-sets" class="tab-controls hidden"></div>
     <div id="tab-controls-tagger" class="tab-controls hidden"></div>
